Simple home page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>FlashCardManager</title>
+  <title>Флэшкарточкер</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+<section id="container">
+<%= render 'layouts/header' %>
+  <section>
+    <%= yield %>
+  </section>
+</section>
 </body>
 </html>
