changes to simple page

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,7 +1,7 @@
-%header.clearfix
+%header#top.navbar.navbar-static-top.bs-docs-nav.clearfix
   %h1 Флэшкарточкер
   %ul.navigation-links
     %li
-      %a{:href => "#"} Все карточки
+      %a{href: :"#"} Все карточки
     %li
-      %a{:href => "#"} Добавить карточку
+      %a{href: :"#"} Добавить карточку
