--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,7 +1,6 @@
 %header#top.navbar.navbar-static-top.bs-docs-nav.clearfix
   %h1 Флэшкарточкер
   %ul.navigation-links
-    %li
-      %a{href: :"#"} Все карточки
+    %li= link_to "Все карточки", cards_path
     %li
       %a{href: :"#"} Добавить карточку
