--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -2,5 +2,4 @@
   %h1 Флэшкарточкер
   %ul.navigation-links
     %li= link_to "Все карточки", cards_path
-    %li
-      %a{href: :"#"} Добавить карточку
+    %li= link_to "Добавить карточки", new_card_path
