--- a/app/views/cards/_form.html.haml
+++ b/app/views/cards/_form.html.haml
@@ -1,19 +1,5 @@
-= form_for @card do |f|
-  - if @card.errors.any?
-    #error_explanation
-    %h2= "#{pluralize(@card.errors.count, "error")} prohibited this card from being saved:"
-    %ul
-      - @card.errors.full_messages.each do |msg|
-        %li= msg
-
-  .field
-    = f.label :original_text
-    = f.text_field :original_text
-  .field
-    = f.label :translated_text
-    = f.text_area :translated_text
-  .field
-    = f.label :review_date
-    = f.text_field :review_date
-  .actions
-    = f.submit 'Save'
+= simple_form_for @card do |f|
+  = f.input :original_text
+  = f.input :translated_text
+  = f.input :review_date
+  = f.button :submit
