--- a/app/views/static_pages/index.html.haml
+++ b/app/views/static_pages/index.html.haml
@@ -1,2 +1,13 @@
 %p{:style => "font-size: 22px;"}
-   Первый в мире удобный менеджер флеш-карточек. Именно так.
+  Первый в мире удобный менеджер флеш-карточек. Именно так.
+%table
+  %tr
+    %th Original Text
+    %th Translated Text
+    %th Review date
+  - @cards.each do |card|
+    %tr
+      %td= card.original_text
+      %td= card.translated_text
+      %td= card.review_date
+
