Added alert and notice

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,5 +9,7 @@
     %section#container
       = render 'layouts/header'
       - if flash[:alert]
-        %p#notice= flash[:alert]
+        %p#alert= flash[:alert]
+      - if flash[:notice]
+        %p#notice= flash[:notice]
       %section= yield
