--- a/app/views/static_pages/index.html.haml
+++ b/app/views/static_pages/index.html.haml
@@ -3,10 +3,10 @@
   
 %p
   - if @card.nil?
-    %span.error Новые,,
+    %span.errorНовых Карточек нет
   - else
     = @card.original_text
-    = form_tag("/cards/#{@card.id}/review", url: 'review_card_path') do
+    = form_tag review_card_path(@card), method: "put" do
       = label_tag(:label, "Введите перевод:")
       = text_field_tag(:translate)
       = submit_tag("Проверить")
