--- a/app/views/static_pages/index.html.haml
+++ b/app/views/static_pages/index.html.haml
@@ -2,7 +2,7 @@
   Первый в мире удобный менеджер флеш-карточек. Именно так.
 %p
   - if @card.nil?
-    %span.error Новых Карточек нет
+    %h2.error#alert Новых Карточек нет
   - else
     = @card.original_text
     = form_tag review_card_path(@card), method: "put" do
