--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,5 +8,5 @@
   %body
     %section#container
       = render 'layouts/header'
-      = render 'layouts/message'
+      = render 'shared/message'
       %section= yield
