--- a/app/views/static_pages/index.html.haml
+++ b/app/views/static_pages/index.html.haml
@@ -1,11 +1,17 @@
 %p{:style => "font-size: 22px;"}
   Первый в мире удобный менеджер флеш-карточек. Именно так.
-%p
-  - unless @card
-    %h2.error#alert Новых Карточек нет
-  - else
-    = @card.original_text
-    = form_tag review_card_path(@card), method: "put" do
-      = label_tag(:label, "Введите перевод:")
-      = text_field_tag(:translate)
-      = submit_tag("Проверить")
+
+- if signed_in?
+  %p
+    - unless @card
+      %h2.error#alert Новых Карточек нет
+    - else
+      = @card.original_text
+      = form_tag review_card_path(@card), method: "put" do
+        = label_tag(:label, "Введите перевод:")
+        = text_field_tag(:translate)
+        = submit_tag("Проверить")
+- else
+  %p 
+    %h1 Зарегестрируйтесь или войдите
+
